--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="css/weather.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Linking BoxIcon for Icon -->
     <link
@@ -92,7 +92,7 @@
       </p>
     </section>
     <!--=========== SCRIPTS ===========-->
-    <script src="js/weatherr.js"></script>
+    <script src="js/weather.js"></script>
     <script src="js/api_keyy.js"></script>
   </body>
 </html>
